Fix the accessibility ("jump to") links
References MonoBook skin repository commit 6dccc0d96e0f2b70822f566ecbd6772f2aa8f3e7 / Change-Id: I40a769ee3a822a5a9167ec1d144e6b151eb8e141.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -868,6 +868,19 @@ h1#site-title {
 	border-bottom: none;
 }
 
+/* Copy of mixin-screen-reader-text() LESS mixin from /resources/src/mediawiki.less/mediawiki.mixins.less@REL1_32 */
+.mw-jump-link:not( :focus ) {
+	display: block;
+	position: absolute !important; /* stylelint-disable-line declaration-no-important */
+	clip: rect( 1px, 1px, 1px, 1px );
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+	border: 0;
+	padding: 0;
+	overflow: hidden;
+}
+
 /* Turn the "Back to top" link into UPPERCASE via CSS so that we don't need to make changes to the source i18n messages */
 a.scrollup {
 	text-transform: uppercase;
